demo-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
spec:
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: colored-canavas
        image: avinashdesireddy/colored-canavas:v2
        imagePullPolicy: Always
