deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colored-canavas
spec:
  selector:
    matchLabels:
      app: canavas
  template:
    metadata:
      labels:
        app: canavas
    spec:
      containers:
      - name: blue
        image: avinashdesireddy/colored-canavas:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: canavas
spec:
  selector:
    app: canavas
  ports:
  - port: 8080
    targetPort: 8080
