demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canavas-demo
spec:
  ingressClassName: nginx-default
  tls:
  - hosts:
    - k8s-ingress-demo.cluster.avinashdesireddy.com
    secretName: demo-tls-secret
  rules:
  - host: k8s-ingress-demo.cluster.avinashdesireddy.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: demo
            port:
              number: 80
